loyalty-app/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 20px 0 0 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

/*
 Not sure if we will keep this
 Makes sure there won't be annoying scrollbars

html, body {
  position: fixed;
  left: 0;
  right: 0;
}

*/

